--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,11 @@
                 <form id="login-form">
                     <div class="mb-3">
                         <label for="username" class="form-label">Usuario</label>
-                        <input type="text" class="form-control" id="username" value="jayala" required>
+                        <input type="text" class="form-control" id="username" value="" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" value="123456a" required>
+                        <input type="password" class="form-control" id="password" value="" required>
                     </div>
                     <div class="d-grid">
                         <button type="submit" class="btn btn-primary">Ingresar</button>
