--- a/public/index.html
+++ b/public/index.html
@@ -6,28 +6,47 @@
     <title>Examen Final - Desarrollo Web</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background-color: #f0f2f5; }
+        body { 
+            background-color: #dac9df; 
+            color: #503459;
+        }
         #app-view { display: none; }
         #messages-container {
             height: 60vh;
             overflow-y: auto;
-            border: 1px solid #ddd;
+            border: 1px solid #b695c0;
             padding: 1rem;
-            background-color: #fff;
+            background-color: #ffffff;
         }
         .message {
             margin-bottom: 1rem;
         }
         .message .author {
             font-weight: bold;
-            color: #0d6efd;
+            color: #503459;
         }
         .message .content {
-            display: block;
-            background-color: #e9ecef;
+            display: inline-block;
+            background-color: #81638b;
+            color: #ffffff;
             padding: 0.5rem 1rem;
             border-radius: 15px;
             max-width: 80%;
+        }
+        .card {
+            border-color: #b695c0;
+        }
+        .btn-primary {
+            background-color: #503459;
+            border-color: #503459;
+            color: #ffffff;
+        }
+        .btn-primary:hover {
+            background-color: #81638b;
+            border-color: #81638b;
+        }
+        h3.card-title, h3 {
+            color: #503459;
         }
     </style>
 </head>
